# solstice

./: .gitignore  Cargo.toml  TODO.md
src/: client.rs  config.rs  context.rs  control.rs  dispatcher.rs  executor.rs  handler.rs  login.rs  main.rs  message.rs  message_handler.rs  proto.rs  result.rs  room.rs  server.rs  user.rs
src/control/: controller.rs  mod.rs  request.rs  response.rs  ws.rs
src/handlers/: login_handler.rs  mod.rs  set_privileged_users_handler.rs
src/proto/: base_codec.rs  codec.rs  connection.rs  constants.rs  frame.rs  handler.rs  mod.rs  packet.rs  prefix.rs  server.rs  stream.rs  testing.rs  transport.rs  u32.rs  user.rs  value_codec.rs
src/proto/peer/: constants.rs  message.rs  mod.rs
src/proto/server/: constants.rs  mod.rs  request.rs  response.rs
