[package]
name = "solstice"
version = "0.1.0"
authors = ["letitz"]
edition = "2018"

[dependencies]
byteorder = "^0.5.1"
bytes = "^0.4"
crossbeam-channel = "^0.3"
encoding = "^0.2"
env_logger = "^0.3.2"
futures = "^0.1"
log = "^0.3.5"
mio = "^0.6"
parking_lot = "^0.8"
rust-crypto = "^0.2.34"
rustc-serialize = "^0.3.17"
slab = "^0.2"
thiserror = "^1.0"
threadpool = "^1.0"
tokio-core = "^0.1"
tokio-io = "^0.1"
tokio-codec = "^0.1"
ws = "^0.4"
